Add script. Change styles.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<ul class="digit digit--1 hour2--0">
+			<ul class="digit hours--1">
 				<li class="item item--h item--1"></li>
 				<li class="item item--v item--2"></li>
 				<li class="item item--v item--3"></li>
@@ -16,7 +16,7 @@
 				<li class="item item--h item--7"></li>
 			</ul>
 
-			<ul class="digit digit--2 hour2--1">
+			<ul class="digit hours--2">
 				<li class="item item--h item--1"></li>
 				<li class="item item--v item--2"></li>
 				<li class="item item--v item--3"></li>
@@ -25,6 +25,8 @@
 				<li class="item item--v item--6"></li>
 				<li class="item item--h item--7"></li>
 			</ul>
+
+			<span class="dottes"></span>
 
 			<ul class="digit min--0">
 				<li class="item item--h item--1"></li>
@@ -45,8 +47,29 @@
 				<li class="item item--v item--6"></li>
 				<li class="item item--h item--7"></li>
 			</ul>
+
+			<ul class="digit digit--sec">
+				<li class="item item--h item--1"></li>
+				<li class="item item--v item--2"></li>
+				<li class="item item--v item--3"></li>
+				<li class="item item--h item--4"></li>
+				<li class="item item--v item--5"></li>
+				<li class="item item--v item--6"></li>
+				<li class="item item--h item--7"></li>
+			</ul>
+
+			<ul class="digit digit--sec">
+				<li class="item item--h item--1"></li>
+				<li class="item item--v item--2"></li>
+				<li class="item item--v item--3"></li>
+				<li class="item item--h item--4"></li>
+				<li class="item item--v item--5"></li>
+				<li class="item item--v item--6"></li>
+				<li class="item item--h item--7"></li>
+			</ul>
 		</div>
 		
+		<script src="assets/js/script.js"></script>
 		<script src="//localhost:35740/livereload.js"></script>
 	</body>
 </html>
