--- a/index.html
+++ b/index.html
@@ -7,65 +7,65 @@
 	<body>
 		<div class="wrapper">
 			<ul class="digit hours--1">
-				<li class="item item--h item--1"></li>
-				<li class="item item--v item--2"></li>
-				<li class="item item--v item--3"></li>
-				<li class="item item--h item--4"></li>
-				<li class="item item--v item--5"></li>
-				<li class="item item--v item--6"></li>
-				<li class="item item--h item--7"></li>
+				<li class="item digit__item item--h item--1"></li>
+				<li class="item digit__item item--v item--2"></li>
+				<li class="item digit__item item--v item--3"></li>
+				<li class="item digit__item item--h item--4"></li>
+				<li class="item digit__item item--v item--5"></li>
+				<li class="item digit__item item--v item--6"></li>
+				<li class="item digit__item item--h item--7"></li>
 			</ul>
 
 			<ul class="digit hours--2">
-				<li class="item item--h item--1"></li>
-				<li class="item item--v item--2"></li>
-				<li class="item item--v item--3"></li>
-				<li class="item item--h item--4"></li>
-				<li class="item item--v item--5"></li>
-				<li class="item item--v item--6"></li>
-				<li class="item item--h item--7"></li>
+				<li class="item digit__item item--h item--1"></li>
+				<li class="item digit__item item--v item--2"></li>
+				<li class="item digit__item item--v item--3"></li>
+				<li class="item digit__item item--h item--4"></li>
+				<li class="item digit__item item--v item--5"></li>
+				<li class="item digit__item item--v item--6"></li>
+				<li class="item digit__item item--h item--7"></li>
 			</ul>
 
 			<span class="dottes"></span>
 
 			<ul class="digit min--0">
-				<li class="item item--h item--1"></li>
-				<li class="item item--v item--2"></li>
-				<li class="item item--v item--3"></li>
-				<li class="item item--h item--4"></li>
-				<li class="item item--v item--5"></li>
-				<li class="item item--v item--6"></li>
-				<li class="item item--h item--7"></li>
+				<li class="item digit__item item--h item--1"></li>
+				<li class="item digit__item item--v item--2"></li>
+				<li class="item digit__item item--v item--3"></li>
+				<li class="item digit__item item--h item--4"></li>
+				<li class="item digit__item item--v item--5"></li>
+				<li class="item digit__item item--v item--6"></li>
+				<li class="item digit__item item--h item--7"></li>
 			</ul>
 
 			<ul class="digit min--1">
-				<li class="item item--h item--1"></li>
-				<li class="item item--v item--2"></li>
-				<li class="item item--v item--3"></li>
-				<li class="item item--h item--4"></li>
-				<li class="item item--v item--5"></li>
-				<li class="item item--v item--6"></li>
-				<li class="item item--h item--7"></li>
+				<li class="item digit__item item--h item--1"></li>
+				<li class="item digit__item item--v item--2"></li>
+				<li class="item digit__item item--v item--3"></li>
+				<li class="item digit__item item--h item--4"></li>
+				<li class="item digit__item item--v item--5"></li>
+				<li class="item digit__item item--v item--6"></li>
+				<li class="item digit__item item--h item--7"></li>
 			</ul>
 
 			<ul class="digit digit--sec">
-				<li class="item item--h item--1"></li>
-				<li class="item item--v item--2"></li>
-				<li class="item item--v item--3"></li>
-				<li class="item item--h item--4"></li>
-				<li class="item item--v item--5"></li>
-				<li class="item item--v item--6"></li>
-				<li class="item item--h item--7"></li>
+				<li class="item digit__item item--h item--1"></li>
+				<li class="item digit__item item--v item--2"></li>
+				<li class="item digit__item item--v item--3"></li>
+				<li class="item digit__item item--h item--4"></li>
+				<li class="item digit__item item--v item--5"></li>
+				<li class="item digit__item item--v item--6"></li>
+				<li class="item digit__item item--h item--7"></li>
 			</ul>
 
 			<ul class="digit digit--sec">
-				<li class="item item--h item--1"></li>
-				<li class="item item--v item--2"></li>
-				<li class="item item--v item--3"></li>
-				<li class="item item--h item--4"></li>
-				<li class="item item--v item--5"></li>
-				<li class="item item--v item--6"></li>
-				<li class="item item--h item--7"></li>
+				<li class="item digit__item item--h item--1"></li>
+				<li class="item digit__item item--v item--2"></li>
+				<li class="item digit__item item--v item--3"></li>
+				<li class="item digit__item item--h item--4"></li>
+				<li class="item digit__item item--v item--5"></li>
+				<li class="item digit__item item--v item--6"></li>
+				<li class="item digit__item item--h item--7"></li>
 			</ul>
 		</div>
 		
