--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Funny watches</title>
+		<title>Digital watch</title>
 		<link rel="stylesheet" href="assets/css/style.css">
 	</head>
 	<body>
